--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="author" content="Kok Tsz Ho Zelca"/>
+    <meta name="keywords" content="Judo,Kata,Nage,Katame,Kime,Ju,Kodokan,Koshiki,Itsutsu,No,Judoka"/>
+    <meta name="description" content="A judo kata handbook for judoka."/>
+    <meta property="og:title" content="形 Kata"/>
+    <meta property="og:image" content="./ijf.png"/>
+    <meta property="og:url" content="https://fsjudokata.herokuapp.com/"/>
+    <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
