--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Judo,Kata,Nage,Katame,Kime,Ju,Kodokan,Koshiki,Itsutsu,No,Judoka"/>
     <meta name="description" content="A judo kata handbook for judoka."/>
     <meta property="og:title" content="形 Kata"/>
-    <meta property="og:image" content="./ijf.png"/>
+    <meta property="og:image" content="https://fsjudokata.herokuapp.com/ijf.jpg"/>
     <meta property="og:url" content="https://fsjudokata.herokuapp.com/"/>
     <meta property="og:type" content="website" />
     <!--
