--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,17 @@
     <meta name="keywords" content="Judo,Kata,Nage,Katame,Kime,Ju,Kodokan,Koshiki,Itsutsu,No,Judoka"/>
     <meta name="description" content="A judo kata handbook for judoka."/>
     <meta property="og:title" content="形 Kata"/>
-    <meta property="og:image" content="https://fsjudokata.herokuapp.com/ijf.jpg"/>
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="249">
+    <meta property="og:image:height" content="249">
+    <meta property="og:image" content="https://fsjudokata.herokuapp.com/appLogo.jpg"/>
     <meta property="og:url" content="https://fsjudokata.herokuapp.com/"/>
     <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="image_src" href="%PUBLIC_URL%/ijf.jpg">
+    <link rel="image_src" href="%PUBLIC_URL%/appLogo.jpg">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
