--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta property="og:image:width" content="249">
     <meta property="og:image:height" content="249">
     <meta property="og:image" content="https://fsjudokata.herokuapp.com/appLogo.jpg"/>
+    <meta property="og:description" content="A judo kata handbook for judoka."/>
+    <meta property="fb:app_id" content="886993984812120"/>
     <meta property="og:url" content="https://fsjudokata.herokuapp.com/"/>
     <meta property="og:type" content="website" />
     <!--
